--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,7 @@
             </div>
             <div class="text-center blue-white footer index-margin pb-5 pt-3">
                 <h2><span class="accent-red">C</span>ontact me</h2>
-                <p>kuchibashimendakon[at]gmail.com</p>
+                <p>sakaechan12345[at]gmail.com</p>
             </div>
         </div>
     </div>
